<resources>
    <!-- manifest -->
    <string name="app_name">Project CS360</string>

    <!-- activity_login -->
    <string name="login_title">Welcome</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_button_bar_login">Login</string>
    <string name="login_button_bar_register">Register</string>
    <string name="login_successful_toast">Welcome Back!</string>
    <string name="login_invalid_input_toast">Invalid Credentials!</string>
    <string name="register_successful_toast">Welcome New User!</string>
    <string name="register_username_collision_toast">Username already exists!</string>

    <!-- activity_main -->
    <!-- fragment_create_event -->
    <string name="title_create_event">New Event</string>
    <string name="create_event_title_label">Event Title</string>
    <string name="create_event_title_input">Click to create a title</string>
    <string name="create_event_description_label">Event Description</string>
    <string name="create_event_description_input">Click to create a description</string>
    <string name="create_event_date_label">Event Date</string>
    <string name="create_event_date_input">Click to select a date</string>
    <string name="create_event_time_label">Event Time</string>
    <string name="create_event_time_input">Click to select a time</string>
    <string name="create_event_button_bar_cancel">Cancel</string>
    <string name="create_event_button_bar_confirm">Confirm</string>
    <!-- fragment_database -->
    <string name="title_all_events">All Events</string>
    <string name="all_events_empty_label">Click the new event button below to start!</string>
    <string name="all_events_successful_SMS">You have enabled SMS notifications for Events!</string>
    <string name="all_events_denied_SMS">You have denied SMS permissions.</string>
    <string name="all_events_already_granted_SMS">Permission already granted</string>

    <!-- fragment_edit_event -->
    <string name="title_edit_event">Edit Event</string>
    <string name="edit_event_title_label">Event Title</string>
    <string name="edit_event_title_input">Click to create a title</string>
    <string name="edit_event_description_label">Event Description</string>
    <string name="edit_event_description_input">Click to create a description</string>
    <string name="edit_event_date_label">Event Date</string>
    <string name="edit_event_date_input">Click to select a date</string>
    <string name="edit_event_time_label">Event Time</string>
    <string name="edit_event_time_input">Click to select a time</string>
    <string name="edit_event_button_bar_cancel">Cancel</string>
    <string name="edit_event_button_bar_confirm">Confirm</string>
    <string name="edit_event_button_bar_delete">Delete</string>
    <!-- fragment_settings -->
    <string name="title_settings">Settings</string>
    <string name="settings_sms_permission">Communicate with Message Apps</string>
    <string name="settings_button_bar_logout">Log Out</string>
    <!-- fragment_view_event -->
    <string name="title_view_event">Event</string>
    <string name="view_event_date_time_label">Date and Time</string>
    <string name="view_event_date">Placeholder Date</string>
    <string name="view_event_time">Placeholder Time</string>
    <string name="view_event_description_label">Description</string>
    <string name="view_event_description">Placeholder Description</string>
    <string name="view_event_button_bar_back">Back</string>
    <string name="view_event_button_bar_edit">Edit</string>

    <!-- generic -->
    <string name="positive_button_dialog">OK</string>
    <string name="negative_button_dialog">Cancel</string>
    <string name="title_dialog_label">Enter Title</string>
    <string name="description_dialog_label">Enter Description</string>
    <string name="empty_input"> Your input is empty!</string>




</resources>