<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEvent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.5"
            android:text="@string/title_edit_event"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_horizontal_rule_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/edit_event_horizontal_rule_title"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="60dp"
            android:background="#000000"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/edit_event_image_view_1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/schedule"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_title_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_event_horizontal_rule_title" />

        <TextView
            android:id="@+id/edit_event_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_title_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_title_input"
            app:layout_constraintStart_toStartOf="@+id/edit_event_title_input" />

        <EditText
            android:id="@+id/edit_event_title_input"
            android:layout_width="383dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:hint="@string/edit_event_title_input"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_description_input"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/edit_event_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_description_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_description_input"
            app:layout_constraintStart_toStartOf="@+id/edit_event_description_input" />

        <EditText
            android:id="@+id/edit_event_description_input"
            android:layout_width="389dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:hint="@string/edit_event_description_input"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_date_input"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/edit_event_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_date_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_date_input"
            app:layout_constraintStart_toStartOf="@+id/edit_event_date_input" />

        <EditText
            android:id="@+id/edit_event_date_input"
            android:layout_width="383dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:hint="@string/edit_event_date_input"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_time_input"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/edit_event_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_event_time_label"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_time_input"
            app:layout_constraintStart_toStartOf="@+id/edit_event_time_input" />

        <EditText
            android:id="@+id/edit_event_time_input"
            android:layout_width="389dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:focusable="false"
            android:cursorVisible="false"
            android:inputType="none"
            android:hint="@string/edit_event_time_input"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/edit_event_button_bar"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/edit_event_button_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/edit_event_button_bar_cancel"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_2"
                android:backgroundTint="@color/primary_2"
                android:clickable="true"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="onFragEditEventClickCancel"
                android:text="@string/edit_event_button_bar_cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <View
                android:id="@+id/edit_event_button_bar_vertical_rule_1"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/edit_event_button_bar_confirm"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_1"
                android:backgroundTint="@color/primary_2"
                android:clickable="true"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="onFragEditEventClick"
                android:text="@string/edit_event_button_bar_confirm"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/edit_event_button_bar_vertical_rule_2"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/edit_event_button_bar_delete"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_1"
                android:backgroundTint="@color/primary_2"
                android:clickable="true"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="onFragEditEventClick2"
                android:text="@string/edit_event_button_bar_delete"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>