<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEvent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/view_event_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:letterSpacing="0.1"
            android:text="@string/title_view_event"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/view_event_horizontal_rule_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_event_horizontal_rule_title"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="60dp"
            android:background="#000000"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_event_date_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_2"
            android:paddingHorizontal="16dp"
            android:paddingBottom="6dp"
            android:text="@string/view_event_date_time_label"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_event_horizontal_rule_title" />

        <View
            android:id="@+id/view_event_horizontal_rule_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/view_event_date_time_label" />

        <TextView
            android:id="@+id/view_event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:text="@string/view_event_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_event_horizontal_rule_1" />

        <TextView
            android:id="@+id/view_event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingBottom="8dp"
            android:text="@string/view_event_time"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_event_date" />

        <View
            android:id="@+id/view_event_horizontal_rule_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/view_event_time" />

        <TextView
            android:id="@+id/view_event_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_2"
            android:paddingHorizontal="16dp"
            android:paddingBottom="6dp"
            android:text="@string/view_event_description_label"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_event_horizontal_rule_2" />

        <View
            android:id="@+id/view_event_horizontal_rule_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/view_event_description_label" />

        <TextView
            android:id="@+id/view_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:text="@string/view_event_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_event_horizontal_rule_3" />

        <LinearLayout
            android:id="@+id/view_event_button_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/view_event_button_bar_back"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_2"
                android:backgroundTint="@color/primary_2"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onFragViewEventClick"
                android:letterSpacing="0.2"
                android:text="@string/view_event_button_bar_back"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <View
                android:id="@+id/view_event_button_bar_vertical_rule_1"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/view_event_button_bar_edit"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/primary_1"
                android:backgroundTint="@color/primary_2"
                android:clickable="true"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:onClick="onFragViewEventClick2"
                android:text="@string/view_event_button_bar_edit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>